# Chess-Analysis-Tool

./: CMakeLists.txt  board.c  board.h  copyright.txt  main.c  parser.c
src/: board.c  board.h  panic.c  panic.h  parser.c  parser.h
